init Spring MVC + Spring + Mybatis

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,1 +1,5 @@
 # 数据库连接
+driverClassName=com.mysql.jdbc.Driver
+url=jdbc:mysql://192.168.66.53:3306/test
+username=sales_control
+password=123QWEcc309mNo
